--- a/composer.json
+++ b/composer.json
@@ -99,6 +99,8 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.52",
+        "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
