--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "doctrine/orm": "^3.1",
     "fakerphp/faker": "^1.23",
     "knplabs/knp-paginator-bundle": "*",
+    "nelexa/zip": "^4.0",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.26",
     "symfony/asset": "7.0.*",
