--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "knplabs/knp-paginator-bundle": "*",
     "nelexa/zip": "^4.0",
     "phpdocumentor/reflection-docblock": "^5.3",
+    "phpoffice/phpspreadsheet": "^2.0",
     "phpstan/phpdoc-parser": "^1.26",
     "symfony/asset": "7.0.*",
     "symfony/asset-mapper": "7.0.*",
