--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,8 +44,7 @@ security:
 
   # Role hierarchy definition
   role_hierarchy:
-    ROLE_ADMIN: [ROLE_MODERATEUR]
-    ROLE_MODERATEUR: [ROLE_USER]
+    ROLE_SUPER_ADMIN: [ROLE_USER]
 
 when@test:
   security:
