--- a/config/packages/knp_paginator.yaml
+++ b/config/packages/knp_paginator.yaml
@@ -8,6 +8,6 @@ knp_paginator:
     filter_field_name: filterField # filter field query parameter name
     filter_value_name: filterValue # filter value query parameter name
   template:
-    pagination: '@KnpPaginator/Pagination/tailwindcss_pagination.html.twig' # sliding pagination controls template
-    sortable: '@KnpPaginator/Pagination/bootstrap_v5_fa_sortable_link.html.twig' # sort link template
+    pagination: 'components/tailwind_pagination.html.twig' # sliding pagination controls template
+    sortable: 'components/sortable_template.html.twig' # sort link template
     filtration: '@KnpPaginator/Pagination/bootstrap_v5_filtration.html.twig' # filters template
