--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "symfony/translation": "7.0.*",
     "symfony/twig-bundle": "7.0.*",
     "symfony/ux-autocomplete": "^2.18",
+    "symfony/ux-icons": "^2.18",
     "symfony/ux-live-component": "^2.18",
     "symfony/ux-turbo": "^2.16",
     "symfony/validator": "7.0.*",
