--- a/composer.json
+++ b/composer.json
@@ -113,6 +113,7 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/phpunit-bridge": "^7.0",
     "symfony/stopwatch": "7.0.*",
-    "symfony/web-profiler-bundle": "7.0.*"
+    "symfony/web-profiler-bundle": "7.0.*",
+    "vincentlanglet/twig-cs-fixer": "^2.11"
   }
 }
