--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "symfony/ux-icons": "^2.18",
     "symfony/ux-live-component": "^2.18",
     "symfony/ux-turbo": "^2.16",
+    "symfony/ux-typed": "^2.18",
     "symfony/validator": "7.0.*",
     "symfony/web-link": "7.0.*",
     "symfony/yaml": "7.0.*",
