--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,11 +39,13 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    - { path: /dashboard, roles: ROLE_SUPER_ADMIN }
+    - { path: ^/dashboard/address/, roles: ROLE_SUPER_ADMIN }
+    - { path: ^/dashboard/, roles: ROLE_ADMIN }
 
   # Role hierarchy definition
   role_hierarchy:
-    ROLE_SUPER_ADMIN: [ROLE_USER]
+    ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+    ROLE_ADMIN: [ROLE_USER]
 
 when@test:
   security:
