--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
     "symfony/ux-autocomplete": "^2.18",
     "symfony/ux-icons": "^2.18",
     "symfony/ux-live-component": "^2.18",
+    "symfony/ux-toggle-password": "^2.18",
     "symfony/ux-turbo": "^2.16",
     "symfony/ux-typed": "^2.18",
     "symfony/validator": "7.0.*",
