--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /facture
 /.idea
 ###> symfony/framework-bundle ###
-/.env.local
+/.env.dev.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
